This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - add support for ipv6 livestatus backends (#753)
          - add timeout for cookie authentication http sub request
          - add filter to notifications and history page
          - add filter to processinfo page
          - fix occasional wrong redirects on page reloads (#776)
          - Business Process:
            - fix save button in chrome (#786)
            - fix displaying configured eventhandler
          - LMD:
            - only restart lmd on timeouts when neccessary
            - support lmd federation mode
          - Mobile:
            - implement remote filtering
            - add alerts and notifications button to extinfo page
          - Logcache:
            - speed up updates

2.18     Mon Dec 25 15:27:06 CET 2017
          - add new option 'commandline_obfuscate_pattern'
          - add python and go client to default cookie_auth_direct_agents
          - combine recurring downtimes for the same time into a single cron entry
          - fix listing service recurring downtimes (#766)
          - fix excel export button (#765)
          - Config Tool:
            - show summary prompt if a post_obj_save_cmd is set
          - Business Process:
            - add weighted state example custom function
            - add new configuration option 'favorite_custom_function'
            - skip reloading core if objects have not changed
          - Reports:
            - add option to only send mails for specific thresholds
            - add button to quickly create excel export reports
            - fix listing outages during downtimes
          - Logcache:
            - fix importing logs from file (#751)
            - fix issue with locking
          - Panorama:
            - add squares widget
            - add user styles option to add generic styles usable in labels etc.
            - add optional helper grid
            - update extjs 4.2.2