@@ -262,6 +262,9 @@ group_paging_overview = *3,  10, 100, all
 group_paging_summary  = *10, 50, 100, all
 group_paging_grid     = *5,  10, 50,  all
 
+# cut off objects on problems page, set 0 to disable limit completly.
+problems_limit = 500
+
 ######################################
 # status page
 # when a plugin returns more than one line of output, the
